# agendable-user-service

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: pre-commit.yml  unit-tests.yml
alembic/: env.py
app/: exceptions.py  main.py
app/core/: decorators.py  dependencies.py  redis_client.py  settings.py
app/db/models/: relationships.py
app/db/repositories/: base_repo.py  group_repo.py  meeting_repo.py  user_repo.py
app/services/: base_service.py  redis_subscriber.py  task_service.py
app/utils/: auth.py
kong/scripts/: configure.sh
meeting-service/: requirements.txt
meeting-service/alembic/: env.py
meeting-service/alembic/versions/: 40b72a62f358_initial_migration.py  90b86563c22a_testing.py  97f80507c587_initial_schema.py  da35dbc6c4cb_.py  f336fad91884_.py  ffe511aa2b79_add_relations.py
meeting-service/app/: errors.py  main.py
meeting-service/app/core/: config.py  decorators.py  dependencies.py  logging_config.py  redis_client.py
meeting-service/app/db/: db.py
meeting-service/app/models/: meeting_attendee.py  task.py
meeting-service/tests/: conftest.py  factories.py  test_main.py
meeting_service/app/: main.py
meeting_service/tests/: conftest.py
tests/: conftest.py  test_auth.py  test_user_crud.py
user-service/: Dockerfile  log  requirements.txt
user-service/app/: main.py
user-service/tests/: conftest.py  test_auth.py  test_group_crud.py  test_protected_routes.py  test_registration.py  test_role_crud.py  test_user_crud.py
user_service/app/: main.py  users.py
(+151 files in other folders)
